--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-connect": "~5.7",
     "gulp-eslint": "~6.0",
     "gulp-imagemin": "~6.2",
-    "gulp-postcss": "~8.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-stylelint": "~11.0",
     "gulp-uglify": "~3.0",
     "gulp-vinyl-zip": "~2.2",
@@ -40,6 +40,7 @@
     "highlight.js": "9.18.3",
     "js-yaml": "~3.13",
     "merge-stream": "~2.0",
+    "postcss": "^8.3.6",
     "postcss-calc": "~7.0",
     "postcss-custom-properties": "~9.1",
     "postcss-import": "~12.0",
