--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@antora/ui-default",
-  "description": "An archetype project that produces a UI for creating documentation sites with Antora",
-  "homepage": "https://gitlab.com/antora/antora-ui-default",
-  "license": "MPL-2.0",
+  "name": "onote-docs-ui",
+  "description": "Antora UI bundle for the oNote documentation site.",
+  "homepage": "https://github.com/evidentsystems/docs-ui.git",
+  "private": true,
+  "license": "unlicensed",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/antora/antora-ui-default.git"
+    "url": "https://github.com/evidentsystems/docs-ui.git"
   },
   "engines": {
     "node": ">= 8.0.0"
@@ -50,12 +51,10 @@
     "require-from-string": "~2.0",
     "stylelint": "~13.3",
     "stylelint-config-standard": "~20.0",
+    "tailwindcss": "^2.2.7",
     "typeface-roboto": "0.0.75",
     "typeface-roboto-mono": "0.0.75",
     "vinyl-buffer": "~1.0",
     "vinyl-fs": "~3.0"
-  },
-  "dependencies": {
-    "tailwindcss": "^2.2.7"
   }
 }
